# simplegraph

./: .gitignore  CMakeLists.txt  LICENSE  base.cpp  base.h  basespecs.cpp  basespecs.h  compiling.txt  pluginmanager.cpp  pluginmanager.h  test.h
plugins/ffmpeg/: CMakeLists.txt
plugins/ffmpegplugin/: CMakeLists.txt  README.txt  ffmpeg.config  ffmpeglistdevices.cpp  ffmpegmain.cpp  ffmpegplugin.cpp  ffmpegplugin.h  ffmpegpluginbase.cpp  ffmpegpluginbase.h  ffmpegread.cpp  ffmpegread.h  ffmpegvideoread.cpp  ffmpegvideoread.h  ffmpegvideosource.cpp  ffmpegvideosource.h  ffmpegvideowrite.cpp  ffmpegvideowrite.h  ffmpegwrite.cpp  ffmpegwrite.h
plugins/testplugin/: CMakeLists.txt  test.config  test2.config  testmain.cpp  testplugin.cpp  testplugin.h
